--- a/css/main.css
+++ b/css/main.css
@@ -578,10 +578,6 @@ video {
   position: relative;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -634,8 +630,8 @@ video {
   top: 80px;
 }
 
-.right-0 {
-  right: 0px;
+.bottom-0 {
+  bottom: 0px;
 }
 
 .z-\[1\] {
@@ -846,6 +842,10 @@ video {
   height: 100%;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -920,10 +920,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-1\/4 {
-  width: 25%;
 }
 
 .max-w-full {
@@ -1040,28 +1036,6 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-24 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(6rem * var(--tw-space-x-reverse));
-  margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-64 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(16rem * var(--tw-space-x-reverse));
-  margin-left: calc(16rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1078,14 +1052,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-\[50px\] {
-  border-radius: 50px;
-}
-
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
@@ -1097,10 +1063,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-l-2 {
@@ -1129,11 +1091,6 @@ video {
 .border-sky-500 {
   --tw-border-opacity: 1;
   border-color: rgb(14 165 233 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#060a12\] {
@@ -1335,26 +1292,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-24 {
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1470,11 +1407,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -1596,12 +1528,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-blue-900 {
   --tw-shadow-color: #1e3a8a;
   --tw-shadow: var(--tw-shadow-colored);
@@ -1643,103 +1569,9 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.before\:absolute::before {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:-left-full::before {
-  content: var(--tw-content);
-  left: -100%;
-}
-
-.before\:top-0::before {
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.before\:z-\[-1\]::before {
-  content: var(--tw-content);
-  z-index: -1;
-}
-
-.before\:h-full::before {
-  content: var(--tw-content);
-  height: 100%;
-}
-
-.before\:w-full::before {
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.before\:rounded-\[50px\]::before {
-  content: var(--tw-content);
-  border-radius: 50px;
-}
-
-.before\:bg-gradient-to-r::before {
-  content: var(--tw-content);
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.before\:from-blue-500::before {
-  content: var(--tw-content);
-  --tw-gradient-from: #3b82f6 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(59 130 246 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.before\:to-blue-300::before {
-  content: var(--tw-content);
-  --tw-gradient-to: #93c5fd var(--tw-gradient-to-position);
-}
-
-.before\:transition-all::before {
-  content: var(--tw-content);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.before\:duration-500::before {
-  content: var(--tw-content);
-  transition-duration: 500ms;
-}
-
-.before\:ease-in-out::before {
-  content: var(--tw-content);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
-
-.hover\:px-12:hover {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.hover\:py-4:hover {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.hover\:py-8:hover {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .hover\:text-\[\#0085FF\]:hover {
@@ -1752,104 +1584,10 @@ video {
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#F44336\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #F44336,-0.5rem -0.5rem #00BCD4;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#205a92\2c -0\.5rem_-0\.5rem_\#43a7bf\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #205a92,-0.5rem -0.5rem #43a7bf;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#112f58\2c -0\.5rem_-0\.5rem_\#43a7bf\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #112f58,-0.5rem -0.5rem #43a7bf;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#0b1e3a\2c -0\.5rem_-0\.5rem_\#43a7bf\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #0b1e3a,-0.5rem -0.5rem #43a7bf;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#0b1e3a\2c -0\.5rem_-0\.5rem_\#1c4e79\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #0b1e3a,-0.5rem -0.5rem #1c4e79;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_textCol\2c -0\.5rem_-0\.5rem_\#1c4e79\]:hover {
-  --tw-shadow: 0.5rem 0.5rem textCol,-0.5rem -0.5rem #1c4e79;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#F44336\2c -0\.5rem_-0\.5rem_\#1c4e79\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #F44336,-0.5rem -0.5rem #1c4e79;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#0b1e3a\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #0b1e3a,-0.5rem -0.5rem #00BCD4;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#F44336\2c -0\.5rem_-0\.5rem_\#1aaec1\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #F44336,-0.5rem -0.5rem #1aaec1;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#1aaec1\2c -0\.5rem_-0\.5rem_\#1aaec1\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #1aaec1,-0.5rem -0.5rem #1aaec1;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#060910\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #060910,-0.5rem -0.5rem #00BCD4;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#236093\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #236093,-0.5rem -0.5rem #00BCD4;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-\[0\.5rem_0\.5rem_\#132c43\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
-  --tw-shadow: 0.5rem 0.5rem #132c43,-0.5rem -0.5rem #00BCD4;
-  --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-\[0\.5rem_0\.5rem_\#141b2b\2c -0\.5rem_-0\.5rem_\#00BCD4\]:hover {
   --tw-shadow: 0.5rem 0.5rem #141b2b,-0.5rem -0.5rem #00BCD4;
   --tw-shadow-colored: 0.5rem 0.5rem var(--tw-shadow-color), -0.5rem -0.5rem var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:before\:left-0:hover::before {
-  content: var(--tw-content);
-  left: 0px;
 }
 
 .focus\:outline-none:focus {
@@ -1885,12 +1623,6 @@ video {
 
 .active\:translate-y-0\.5:active {
   --tw-translate-y: 0.125rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.active\:scale-90:active {
-  --tw-scale-x: .9;
-  --tw-scale-y: .9;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2039,6 +1771,10 @@ video {
     height: 12rem;
   }
 
+  .md\:h-40 {
+    height: 10rem;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
@@ -2051,8 +1787,8 @@ video {
     width: auto;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
+  .md\:w-40 {
+    width: 10rem;
   }
 
   .md\:grid-cols-2 {
@@ -2159,6 +1895,10 @@ video {
     height: 25%;
   }
 
+  .lg\:h-64 {
+    height: 16rem;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
@@ -2167,8 +1907,8 @@ video {
     width: 25%;
   }
 
-  .lg\:w-full {
-    width: 100%;
+  .lg\:w-64 {
+    width: 16rem;
   }
 
   .lg\:columns-3 {
@@ -2216,24 +1956,9 @@ video {
     line-height: 1.75rem;
   }
 
-  .hover\:lg\:px-12:hover {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .hover\:lg\:py-8:hover {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .hover\:lg\:py-4:hover {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
-  .hover\:lg\:py-6:hover {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
